StyleSheet.css
body {
    font-family: 'Open Sans', sans-serif;
}
table {
    border-collapse: collapse;
    font-size: 18px;
}
th {
    color: white;
    background-color: #4A4A4A;
}
tr:nth-child(odd) {
    background-color: #F0F0F0;
}
td, th {
    padding: 5px 15px;
}
.full-page-loading-spinner-container {
    height: 100%;
    width: 100%;
    background-color: rgba(1,1,1,.7);
    position: fixed;
    margin: -8px;
    display: none;
}
.loading-spinner {
    border: 8px solid #f3f3f3;
    border-top: 8px solid #3498db;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    animation: loading-spinner 2s linear infinite;
    margin: auto;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}
@keyframes loading-spinner {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}
.main-content-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.main-content-container > * {
    margin: 10px;
}
.item-row {
    text-align: center;
}
.row-name {
    text-align: right;
}
.quantity {
    color: grey;
    font-size: 80%;
}
.currency {
    height:13px;
}
.selected-filter {
    text-decoration: underline;
}
.item-icon {
    height: 30px;
}
.item-icon-container {
    display: flex;
    align-items: center;
}
.search-result-container {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.search-results-section {
    display: none;
    border: 2px solid black;
    margin: 5px;
    max-height: 300px;
    overflow-y: scroll;
}
.bordered-item {
    max-width: 34px;
    max-height: 34px;
}
.delete-item img {
    margin: 5px;
}
.Junk {
    border: 2px solid #AAA;
}
.Basic {
    border: 2px solid white;
}
.Fine {
    border: 2px solid #62A4DA;
}
.Masterwork {
    border: 2px solid #1a9306;
}
.Rare {
    border: 2px solid #fcd00b;
}
.Exotic {
    border: 2px solid #ffa405;
}
.Ascended {
    border: 2px solid #fb3e8d;
}
.Legendary {
    border: 2px solid #4C139D;
}

